# BIeR

./: .gitignore  BIERConfig.cmake.in  CMakeLists.txt  DesignDoc.md  README.md  common.h
bier/: CMakeLists.txt  common.h
bier/builder/: CMakeLists.txt  module_builder.cpp  module_builder.h  verifier.cpp  verifier.h
bier/core/: CMakeLists.txt  basic_block.cpp  basic_block.h  basic_types.cpp  basic_types.h  const_value.cpp  const_value.h  exceptions.cpp  exceptions.h  function.cpp  function.h  function_context.h  int_types.h  label.cpp  label.h  layout.cpp  layout.h  module.cpp  module.h  operation.cpp  operation.h  static_data.cpp  static_data.h  type.cpp  type.h  types_registry.cpp  types_registry.h  value.h  variable.cpp  variable.h  variable_name.cpp  variable_name.h
bier/dag/: CMakeLists.txt  dag_context.cpp  dag_context.h  dag_view.cpp  dag_view.h
bier/dag/dag_graph/: CMakeLists.txt  dot_serializer.cpp  dot_serializer.h  graph.cpp  graph.h  graph_builder.cpp  graph_builder.h  node.h
bier/llvm/: CMakeLists.txt  llvm_pass.cpp  llvm_pass.h
bier/operations/: CMakeLists.txt  alloc_layout.cpp  alloc_layout.h  branch.cpp  branch.h  call.cpp  call.h  cast.cpp  cast.h  const_op.cpp  const_op.h  gep.cpp  gep.h  opcodes.h  ops.h  return.cpp  return.h
bier/parser/: CMakeLists.txt  bier_lexprinter.cpp  bier_parserprinter.cpp  bier_scanner.cpp  bier_scanner.h  exceptions.h  lexems.ll  parser.yy
bier/parser/ast/: CMakeLists.txt  ast_block.cpp  ast_block.h  ast_func.cpp  ast_func.h  ast_layout.cpp  ast_layout.h  ast_node.h  ast_static.cpp  ast_static.h  ast_structs.h  module_ast.cpp  module_ast.h  module_ast_builder.cpp  module_ast_builder.h  node_types.h  visitor.h
bier/pass/: CMakeLists.txt  module_pass.h  operation_pass.cpp  operation_pass.h  ssa_pass.cpp  ssa_pass.h  transform_pass.h
bier/serialization/: CMakeLists.txt  op_literals.cpp  op_literals.h  text_serializer.cpp  text_serializer.h
bier/utils/: intrusive_list.h  iterator_range.h  ptr_iterator.h  streaming_utils.h
builder/: CMakeLists.txt
core/: CMakeLists.txt  function.cpp  function.h  type.h  variable_name.h
tests/: CMakeLists.txt
tests/core/: CMakeLists.txt  functions_declaration_test.cpp  layout_test.cpp  type_registry_test.cpp
tests/parser/sources/: TreeVisitor.pt  print_matrix.pt  unknown.pt
tests/utils/: CMakeLists.txt  opcodes_literal_test.cpp  utils_tests.cpp
